--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<button id="login_button" class="btn btn-primary" onclick="Start()">Log in</button>
 		<br><br>
 	</div>
-
+    <script src="Kwitter.js"></script>
     </body>
 </html>
 	
